# gs-hackathon

./: LICENSE  README.md  TASK.md  example.yaml  injections.txt  parse_endpoints.py  pyproject.toml
app/frontend/: package.json
app/frontend/src/: App.tsx  UploadAPI.tsx
backend/: parse_endpoints.py  showcase.py
backend/app/: api.py  auth_check.py
backend/injection/: __init__.py  methods.py  parse_endpoints.py  pipeline.py  pipeline.py.orig  prepare_payloads.py  sql.py
backend/scraper/: parse_endpoints.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  UploadAPI.tsx  index.css  main.tsx
frontend/src/components/: BasicApiData.tsx  Results.tsx
scraper/: main.py
scrapper/: main.py
