[tool.poetry]
name = "gs-hackathon"
version = "0.1.0"
description = ""
authors = ["Jakub Bąba <jakub.baba.stud@pw.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
python-multipart = "^0.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
