[tool.poetry]
package-mode = false
name = "gs-hackathon"
version = "0.1.0"
description = ""
authors = ["Jakub Bąba <jakub.baba.stud@pw.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
python-multipart = "^0.0.19"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
